adding to display from github

--- a/_posts/2018-09-07-DIve-into-pandas.ipynb
+++ b/_posts/2018-09-07-DIve-into-pandas.ipynb
@@ -1546,7 +1546,14 @@
    "source": [
     "#### 4. Removing rows/columns from a DataFrame\n",
     "\n",
-    "We can remove a row or a column using the .drop() function. In doing this, we have to specify the **axis=0 for row, and axis=1 for column.**"
+    "We can remove a row or a column using the [.drop()](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.drop.html) function. In doing this, we have to specify the **axis=0 for row, and axis=1 for column.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Hint: click to[here for the documentation](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.drop.html)**"
    ]
   },
   {
@@ -1573,7 +1580,7 @@
     "\n",
     "To select rows, we have to call the location of the rows using .loc[] which takes in the label name or .iloc[] which takes in the index position of the row.\n",
     "\n",
-    "a"
+    "**hint : [click me](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.loc.html#pandas.DataFrame.loc)**"
    ]
   },
   {
@@ -1597,6 +1604,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
    "outputs": [],
@@ -1606,18 +1620,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get just their name and country of origin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**hint : [click me](http://pandas.pydata.org/pandas-docs/stable/indexing.html#boolean-indexing) and [me](https://www.shanelynn.ie/select-pandas-dataframe-rows-and-columns-using-iloc-loc-and-ix/)** "
    ]
   },
   {
@@ -1657,6 +1671,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**hint : [click me](http://pandas.pydata.org/pandas-docs/stable/missing_data.html#cleaning-filling-missing-data)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 7. GroupBy\n",
     "\n",
     "Grouby allows you group together rows based off a column so that you can perform aggregate functions (such as sum, mean, median, standard deviation, etc) on them.\n",
@@ -1685,6 +1706,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Hint : [click me](http://pandas.pydata.org/pandas-docs/stable/groupby.html)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 8. The apply() Method\n",
     "\n",
     "The .apply() method is used to call custom functions on a DataFrame. Imagine we have a function:"
@@ -1697,6 +1725,13 @@
    "outputs": [],
    "source": [
     "## get the square of prociciency in pyhton"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**hint : [click me](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.Series.apply.html)**"
    ]
   },
   {
@@ -1722,6 +1757,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**hint: find yourself**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 10. Sorting and Ordering DataFrame\n",
     "\n",
     "Imagine we wanted to display the DataFrame with a certain column being displayed in ascending order, we could easily sort it using .sort_values():"
@@ -1734,6 +1776,13 @@
    "outputs": [],
    "source": [
     "### let sort our data by country"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**hint: google is your friend**"
    ]
   },
   {
@@ -1787,6 +1836,13 @@
     "                        'C': ['C8', 'C9', 'C10', 'C11'],\n",
     "                        'D': ['D8', 'D9', 'D10', 'D11']},\n",
     "                        index=[8, 9, 10, 11])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**hint??: Use google**"
    ]
   },
   {
