removing auto destructing comment

--- a/_posts/2018-05-18-intro.md
+++ b/_posts/2018-05-18-intro.md
@@ -8,10 +8,10 @@ I'm a fuse machine fellow for this year, I'm learning Artificial Intelligence vi
 I also write javascript code, just vanilla javascript with no framework and I  hate jquery.
 I'm one of the [FoloopRwanda](forloop.africa) organizers
 
-*What else can I tell you about me?:*
+~~*What else can I tell you about me?:*~~
 
-Okay, for now, I a ~~cowboy developer~~, I write code but I haven't delivered any project may be soon I will deliver one.
-I like learning new technologies and reading articles and blog post on how to become a better software developer, my biggest dream is to master agile technology and work in a team of software developers where I can apply everything I have learned since the day I become passionate about software development and deliver at least one project.
+~~Okay, for now, I a ~~cowboy developer~~, I write code but I haven't delivered any project may be soon I will deliver one.
+I like learning new technologies and reading articles and blog post on how to become a better software developer, my biggest dream is to master agile technology and work in a team of software developers where I can apply everything I have learned since the day I become passionate about software development and deliver at least one project.~~
 
 *As I need to write another paragraph about me let me say this :*
 
@@ -24,7 +24,7 @@ I like meetups, especially when I'm among the organizers, in the past week I hav
 
 Okay. it's time to conclude:
 
-I worst thing I hate in my life is the fact that I spent 18 years of my life studying in French because now I need to learn everything in English and communicate with people in English. It's not easy every time I speak English I think that I have a French accent.
+~~I worst thing I hate in my life is the fact that I spent 18 years of my life studying in French because now I need to learn everything in English and communicate with people in English. It's not easy every time I speak English I think that I have a French accent.~~
 
 Okay; I hate that blogging stuff, I can't even have a one-page blog post about me.
 I will be back the next time I will have ideas to write about.
